--- a/proyectoTiendadeRopa/TiendadeRopa.WebAdmin/TiendadeRopa.WebAdmin.csproj
+++ b/proyectoTiendadeRopa/TiendadeRopa.WebAdmin/TiendadeRopa.WebAdmin.csproj
@@ -9,12 +9,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C3C8E722-B577-42BF-B767-28B6B51B72BE}</ProjectGuid>
+    <ProjectGuid>{5109759F-5FAD-4EAC-AAA8-208C49EFA7F7}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>proyectoTiendadeRopa.Web</RootNamespace>
-    <AssemblyName>proyectoTiendadeRopa.Web</AssemblyName>
+    <RootNamespace>TiendadeRopa.WebAdmin</RootNamespace>
+    <AssemblyName>TiendadeRopa.WebAdmin</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -131,12 +131,10 @@
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
-    <Content Include="Views\Productos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -185,9 +183,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>52421</DevelopmentServerPort>
+          <DevelopmentServerPort>53509</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:52421/</IISUrl>
+          <IISUrl>http://localhost:53509/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
